syntax = "proto3";
option java_package = "com.game.vanta.proto";
import "options.proto";



message ReqLoginMessage {

    option (msgId) = 11000;

    // 第三方账号
    string openId = 1;

    // 登录验证 token
    string token = 2;

}

message ResLoginMessage {

    option (msgId) = 11001;

    // 第三方账号
    string openId = 1;

    // 是否通过
    bool success = 2;

}

message ResRoleBasicInfoMessage {

    option (msgId) = 11002;

    string roleId = 1;

    string name = 2;

    int32 level = 3;

}

message ReqTestMessage {

    option (msgId) = 10001;

    int32 id = 1;

    string name = 2;

}

message ResTestMessage {

    option (msgId) = 10002;

    bool result = 1;

}


message ReqTestVoidMessage {

    option (msgId) = 10003;

}
